mysql-v2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  labels:
      name: mysql-ingress
spec:
  rules:
  - host: levankhelashvili.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: phpmyadmin-service
            port: 
              number: 80
